# Cloudid

./: README.md  pyproject.toml  readme.md
.github/workflows/: python-package.yml  release.yml
.src/: scanner.py
src/cloudid-hunter/: __init__.py
