[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudid-hunter"
version = "1.3.2"
authors = [
    { name="Principal Security Engineer", email="your.email@example.com" }
]
description = "High-Performance Cloud Metadata Exposure Discovery Tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Operating System :: OS Independent",
]
dependencies = [] # Zero external dependencies required!

[project.scripts]
# This magic line registers a global terminal command linked to your script's main() function!
cloudid-hunter = "cloudid_hunter.scanner:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]
